objects/Account_Extension__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>ADS_Current_Month__c</fullName>
        <label>ADS-Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Current_Qtr__c</fullName>
        <label>ADS-Current Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Current_Yr__c</fullName>
        <label>ADS-Current Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Month__c</fullName>
        <label>ADS-Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Qtr__c</fullName>
        <label>ADS-Last Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADS_Last_Yr__c</fullName>
        <label>ADS-Last Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOPS_Cust_Id_Length__c</fullName>
        <formula>if(AOPS_Cust_Id__c !=null, LEN(AOPS_Cust_Id__c) ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPS Cust Id Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AOPS_Cust_Id__c</fullName>
        <description>AOPS Customer Account Number</description>
        <externalId>true</externalId>
        <label>AOPS Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AOPS_Seq_ID__c</fullName>
        <externalId>true</externalId>
        <label>AOPS Seq ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AOPS_Site_Length__c</fullName>
        <formula>if(AOPS_Seq_ID__c != null, LEN(Seq_ID__c) ,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AOPS Site Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Month__c</fullName>
        <label>AOV-Current Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Qtr__c</fullName>
        <label>AOV-Current Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Current_Yr__c</fullName>
        <label>AOV-Current Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Month__c</fullName>
        <label>AOV-Last Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Qtr__c</fullName>
        <label>AOV-Last Qtr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AOV_Last_Yr__c</fullName>
        <label>AOV-Last Yr</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <label>Account Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Dormants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Page_Source__c</fullName>
        <description>This field would be populated by the value of LeadPageSource field of Lead object during the lead conversion process. created as part of - S-366880</description>
        <label>Account Page Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ParentId</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>Account Extensions (Account ParentId)</relationshipLabel>
        <relationshipName>Account_parent_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Parent_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Parent Id</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipName>Account_Dormants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_Id__c</fullName>
        <label>Account Record Type Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Setup_Request_Status__c</fullName>
        <label>Setup Request Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single User</fullName>
                </value>
                <value>
                    <fullName>Multi-User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Extensions (Account)</relationshipLabel>
        <relationshipName>Account_to_extension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_level_email_permission_flag__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <description>Email permissions</description>
        <label>Email Permission</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Hqtrs__c</fullName>
        <label>Acct. Headquarters?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address1_DW__c</fullName>
        <description>Address1 reformatted for DW</description>
        <formula>SUBSTITUTE( Address1__c , &quot;\&quot;&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address1 DW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_DW__c</fullName>
        <formula>SUBSTITUTE( Address2__c , &quot;\&quot;&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address2 DW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Key__c</fullName>
        <label>Address Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Validation_Error__c</fullName>
        <label>Address Validation Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assign_Specific_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign Specific Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back_to_School__c</fullName>
        <label>Back to School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingCity__c</fullName>
        <label>BillingCity</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingCountry__c</fullName>
        <label>BillingCountry</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingState__c</fullName>
        <label>BillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Usage_Type__c</fullName>
        <label>Business Usage Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the customer/shipto has bought in the last 2 years</description>
        <label>Buying Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buying_Group__c</fullName>
        <label>Belongs To</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Buying Groups Small &lt;$40K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Small $40K-$75K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Small &lt;$40K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Small $40K-$75K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Standalone Small &lt;$40K</fullName>
                </value>
                <value>
                    <fullName>Standalone Small $40K-$75K</fullName>
                </value>
                <value>
                    <fullName>Standalone Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Standalone Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Standalone Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Standalone Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Standalone K-12</fullName>
                </value>
                <value>
                    <fullName>Standalone Higher-Ed</fullName>
                </value>
                <value>
                    <fullName>Standalone Federal</fullName>
                </value>
                <value>
                    <fullName>Standalone State</fullName>
                </value>
                <value>
                    <fullName>Standalone Local</fullName>
                </value>
                <value>
                    <fullName>Standalone Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Standalone Enterprise $1M+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBS_IMU_LY__c</fullName>
        <label>CBS IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_IMU_TY__c</fullName>
        <label>CBS IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_LY__c</fullName>
        <description>CBS Sales Last Year</description>
        <inlineHelpText>CBS Sales Last Year</inlineHelpText>
        <label>CBS LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Last_Order__c</fullName>
        <label>CBS Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CBS_Last_order_amt__c</fullName>
        <label>CBS Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Pot__c</fullName>
        <description>CBS Potential</description>
        <inlineHelpText>CBS Potential</inlineHelpText>
        <label>CBS Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_TY__c</fullName>
        <description>CBS Sales This Year</description>
        <inlineHelpText>CBS Sales This Year</inlineHelpText>
        <label>CBS TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBS_Total_LY__c</fullName>
        <label>CBS Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CONTRACT_RETAIL_CUST_CODE__c</fullName>
        <label>Contract Or Retail Customer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_LY__c</fullName>
        <label>CPD IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_IMU_TY__c</fullName>
        <label>CPD IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_LY__c</fullName>
        <description>DPS Sales Last Year</description>
        <inlineHelpText>DPS Sales Last Year</inlineHelpText>
        <label>CPD LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Last_Order__c</fullName>
        <label>CPD Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPD_Last_order_amt__c</fullName>
        <label>CPD Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Pot__c</fullName>
        <description>DPS Potential</description>
        <inlineHelpText>DPS Potential</inlineHelpText>
        <label>CPD Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_TY__c</fullName>
        <description>DPS Sales This Year</description>
        <inlineHelpText>DPS Sales This Year</inlineHelpText>
        <label>CPD TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_Total_LY__c</fullName>
        <label>CPD Total LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cadence_Call_Date_Override_Value__c</fullName>
        <description>Frequency at which this customer/site should be contacted.</description>
        <label>Cadence Call Date Override Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cadence_Call_Date_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Overrides the custom configuration for call date frequency</description>
        <label>Cadence Call Date Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cadence_Call_Date__c</fullName>
        <label>Cadence Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Tools_Qual_Survey__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <description>Flag to know if the clicktools qualifying survey has been updated.</description>
        <inlineHelpText>Flag to know if the clicktools qualifying survey has been updated.  This is updated by clicktools and shouldn&amp;apos;t be update by user interaction.</inlineHelpText>
        <label>ClickToolsQualSurvey</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_DUNS_ID__c</fullName>
        <label>Consolidated DUNS ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_LY__c</fullName>
        <label>Contract Furniture IMU LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_IMU_TY__c</fullName>
        <label>Contract Furniture IMU TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_LY__c</fullName>
        <label>Contract Furniture LY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Last_Order__c</fullName>
        <label>Contract Furniture Last Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Last_Order_amt__c</fullName>
        <label>Contract Furniture Last Order $</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_Pot__c</fullName>
        <label>Contract Furniture Pot</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Furniture_TY__c</fullName>
        <label>Contract Furniture TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Copier_Fleet_Expiration_Date__c</fullName>
        <label>Copier Fleet Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copiers__c</fullName>
        <label># Copiers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Dept__c</fullName>
        <description>Created for Story #S-357920</description>
        <label>Cost Centre Dept</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                    <default>true</default>
                    <label>USA</label>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>MEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_flag__c</fullName>
        <defaultValue>&apos;Y&apos;</defaultValue>
        <label>Coupon flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Account_ID__c</fullName>
        <externalId>true</externalId>
        <label>Current Account ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_ID2__c</fullName>
        <formula>if( RecordType.Name = &quot;[Site]&quot;, AOPS_Seq_ID__c , 
if( RecordType.Name= &quot;[Customer]&quot; &amp;&amp; Grandparent__c = &quot;No&quot;, AOPS_Cust_Id__c, 
if( RecordType.Name= &quot;[GrandParent]&quot; &amp;&amp; LEN(AOPS_Cust_Id__c) = 1, &quot;0000000&quot; + AOPS_Cust_Id__c, 
if( RecordType.Name= &quot;[GrandParent]&quot; &amp;&amp;  LEN(AOPS_Cust_Id__c) = 2, &quot;000000&quot; + AOPS_Cust_Id__c, 
if( RecordType.Name= &quot;[GrandParent]&quot; &amp;&amp; LEN(AOPS_Cust_Id__c) = 3, &quot;00000&quot; + AOPS_Cust_Id__c, 
if( RecordType.Name= &quot;[GrandParent]&quot; &amp;&amp;  LEN(AOPS_Cust_Id__c) = 4, &quot;0000&quot; + AOPS_Cust_Id__c, 
if( RecordType.Name= &quot;[GrandParent]&quot; &amp;&amp;  LEN(AOPS_Cust_Id__c) = 5, &quot;000&quot; + AOPS_Cust_Id__c, 
if( RecordType.Name= &quot;[GrandParent]&quot; &amp;&amp;  LEN(AOPS_Cust_Id__c) = 6, &quot;00&quot; + AOPS_Cust_Id__c, 
if( RecordType.Name= &quot;[Customer (OfficeMax)]&quot; ,OMX_Mainframe_Account_Number__c, 
if( RecordType.Name= &quot;[Site (OfficeMax)]&quot; ,OMX_Mainframe_Account_Number__c+ &apos;-&apos;+OMX_Mainframe_Consignee_ID__c, 
if( RecordType.Name= &quot;[Site (GT)]&quot; ,OMX_Primary_Key__c, 
if( RecordType.Name= &quot;[Customer (GT)]&quot; ,OMX_Primary_Key__c, 
null 
))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <label>Cust ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Lifecycle__c</fullName>
        <label>Customer Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Penetration</fullName>
                </value>
                <value>
                    <fullName>At-Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Portal_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Portal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Setup_Completed__c</fullName>
        <label>Customer Setup Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Setup_Requested__c</fullName>
        <label>Customer Setup Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Source__c</fullName>
        <description>We would like a new field added to salesforce.com on the customer and site page layouts.  This field would indicate the &quot;source&quot; of the customer for Inside Sales.  The field resources would not need access to the field.  The purpose of the field is to highlight for an inside rep which type of rep used to own the account.  As you can imagine, the initial conversation with a customer can be completely different if they used to be serviced by an on-site field rep vs an Outsourced Partner vs a Mailstream account that just received Marketing.  Values that we&apos;ve thought of include: Field Rep, Mailstream, and Outsourced Partner.  We would not need any logic applied to the field.  It can be freeform.  The SFDC Analyst in Austin would maintain the values of that field.  We are open to other suggestions on how to accomplish the same thing.  On Monday, accounts from the field are going to be swept into Inside Sales so we are looking to do this quickly.</description>
        <inlineHelpText>This field shows the customer source when available.  The initial conversation with a customer can be completely different if they had been serviced by an on-site field rep vs an Outsourced Partner vs a Mailstream account that just received Marketing.</inlineHelpText>
        <label>Customer Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field Rep</fullName>
                </value>
                <value>
                    <fullName>Mailstream</fullName>
                </value>
                <value>
                    <fullName>Outsourced Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNBI_Application_ID__c</fullName>
        <description>This hold the Application ID of the DNBI Process</description>
        <label>DNBI Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI_CREDIT_OUTCOME__c</fullName>
        <description>THIS IS CREATED BY MOHAN TO TEST THE CREDIT OUTCOME</description>
        <label>DNBI Credit Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNBI_FSS_Score__c</fullName>
        <description>This field will capture the &quot;Financial Stress Score&quot; from the DNBi API call.</description>
        <label>DNBI FSS Score</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNBI_MatchScore__c</fullName>
        <description>This is to hold the Match Score of  address from the DNBI</description>
        <label>DNBI MatchScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Block_Group_Code__c</fullName>
        <label>DNB Block Group Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Division__c</fullName>
        <label>DNB Division</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Duns__c</fullName>
        <label>DUNS #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Employee_Total__c</fullName>
        <label>Employee Total</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Employees_Here__c</fullName>
        <label>DNB Employees Here</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Family_Updated_Date__c</fullName>
        <label>Family Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNB_Global_Ult_Duns__c</fullName>
        <label>Global Ult. Duns</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Hier_Code__c</fullName>
        <label>Hier. Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Hqtr_Duns__c</fullName>
        <label>Hqtr. Duns</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Legal_Status__c</fullName>
        <label>Legal Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Minority_Business__c</fullName>
        <label>Minority Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Parent_Duns__c</fullName>
        <label>Parent DUNS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Phone__c</fullName>
        <label>DNB Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DNB_Private__c</fullName>
        <label>Private</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_SIC__c</fullName>
        <label>SIC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Sales__c</fullName>
        <label>DNB Sales $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DNB_Small_Business__c</fullName>
        <label>Small Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Status__c</fullName>
        <label>DNB Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Subsidiary__c</fullName>
        <label>Subsidiary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Total_Family_Member__c</fullName>
        <label>Total Family Mem.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Ultimate_Name__c</fullName>
        <label>Ultimate Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Vertical_Markets__c</fullName>
        <label>Vertical Markets</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_WCW_Here__c</fullName>
        <label>WCW Here</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_WCW_Total__c</fullName>
        <label>WCW Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNB_Year_Started__c</fullName>
        <label>Year Started</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DSM1_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_com_Key__c</fullName>
        <label>Data.com Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_Charge__c</fullName>
        <label>Deliver Charge</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns_Enrichment__c</fullName>
        <description>Duns Enrichment loaded October 7th, 2014</description>
        <label>Duns Enrichment</label>
        <length>9</length>
        <type>Text</type>
    </fields>
</CustomObject>